week4/default/update: API 명세서, openapi-generator gradle, Mock API 수정
