# src/main/java/hanghaeplus/api/concert/controller/ConcertController.java
@@ -1,10 +1,10 @@
 package hanghaeplus.api.concert.controller;
 
-import com.schooldevops.apifirst.openapi.domain.AvailableSeatsResponseInner;
-import com.schooldevops.apifirst.openapi.domain.QueueCountResponse;
-import com.schooldevops.apifirst.openapi.domain.SeatReservationRequest;
-import com.schooldevops.apifirst.openapi.domain.SeatReservationResponse;
-import com.schooldevops.apifirst.openapi.rest.ConcertsApi;
+import org.openapi.api.ConcertsApi;
+import org.openapi.model.AvailableSeatsHttpResponseInner;
+import org.openapi.model.QueueCountHttpResponse;
+import org.openapi.model.SeatReservationHttpRequest;
+import org.openapi.model.SeatReservationHttpResponse;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -16,27 +16,28 @@ import java.util.UUID;
 
 @RestController
 public class ConcertController implements ConcertsApi {
+
     @Override
-    public ResponseEntity<QueueCountResponse> checkConcertDateQueueCount(UUID X_USER_TOKEN, Integer concertId, Date date) {
-        return ResponseEntity.ok(new QueueCountResponse(5));
+    public ResponseEntity<QueueCountHttpResponse> checkConcertDateQueueCount(UUID X_USER_TOKEN, Long concertId, String date) {
+        return ResponseEntity.ok(new QueueCountHttpResponse(5));
     }
 
     @Override
-    public ResponseEntity<SeatReservationResponse> reserveConcertSeat(Integer concertId, Date date, Integer seatId, UUID X_USER_TOKEN, SeatReservationRequest seatReservationRequest) {
-        return ResponseEntity.ok(new SeatReservationResponse("좌석이 임시 배정되었습니다."));
+    public ResponseEntity<SeatReservationHttpResponse> reserveConcertSeat(Long concertId, String date, Long seatId, UUID X_USER_TOKEN, SeatReservationHttpRequest seatReservationHttpRequest) {
+        return ResponseEntity.ok(new SeatReservationHttpResponse("좌석이 임시 배정되었습니다."));
     }
 
     @Override
-    public ResponseEntity<List<Date>> selectAvailableConcertDates(Integer concertId, UUID X_USER_TOKEN) {
+    public ResponseEntity<List<String>> selectAvailableConcertDates(Long concertId, UUID X_USER_TOKEN) {
         LocalDate localDate = LocalDate.of(2024, 10, 20);
         Date date = Date.from(localDate.atStartOfDay(ZoneId.systemDefault()).toInstant());
-        return ResponseEntity.ok(List.of(date));
+        return ResponseEntity.ok(List.of(date.toString()));
     }
 
     @Override
-    public ResponseEntity<List<AvailableSeatsResponseInner>> selectAvailableConcertSeats(Integer concertId, Date date, UUID X_USER_TOKEN) {
+    public ResponseEntity<List<AvailableSeatsHttpResponseInner>> selectAvailableConcertSeats(Long concertId, String date, UUID X_USER_TOKEN) {
         return ResponseEntity.ok(List.of(
-                new AvailableSeatsResponseInner(1, "A-1"),
-                new AvailableSeatsResponseInner(2, "A-2")));
+                new AvailableSeatsHttpResponseInner(1L, "A-1"),
+                new AvailableSeatsHttpResponseInner(2L, "A-2")));
     }
 }
